# study

./: README.md  go.mod  go.sum  main  main.go  test.go  testxx.go
GC-垃圾回收/: read.md
a_test/: main.go
a_test2/: main.go
al2_test/: main.go
al_test/: main.go
al_test10/: main.go
al_test11/: main.go
al_test3/: main.go
al_test4/: main.go
al_test5/: main.go  test.go
al_test6/: main.go
al_test7/: main.go
al_test8/: main.go
al_test9/: main.go
ana3/: api-user-wai.csv  service-uic-wai.csv  test.go
ana4-nei/: api-user-nei.csv  go-center-nei.csv  php-service-uic-nei-ok.csv  php-usercenter-nei.csv  service-uic-nei.csv  test.go
analyze_log/: aa.go
analyze_log2/: Command.go  log.md  main.go
analyze_log3/: AccesslogPV.go  Command.go  File.go  Makefile  Path.go  default-1640316563-.csv  main.go
analyze_log3/rpm/: .gitignore  META  Makefile.am  configure.ac  metaview.spec
analyze_log3/rpm/metacli/: Makefile.am
analyze_log3/rpm/metaview/: Makefile.am
ascll/: test.go
chan/: main.go
code-check/: read.md
context/: 1.md  main.go
defer/: caas3.go  case1.go  case2.go  case3.go  case4.go  case5.go
demo/: main.go
demo2/: aa.go
dingopen/: main.go
dingtalk/: main.go
file/: func1.go  func2.go  func4.go  func5.go
functype/: test1.go  test2.gp.go  test3.go
gin/: read.md
godebug/: read.md
gorm/: main.go  read.md
goroutine/: read.md  read2.md
gpm/: 2.md  debug_trace.md  trace.md
gpm2/: read.md
init/: read.md
interface/: conver.go  main.go  read.md  test.go  test2.go
json/: read.md
logctl/: AccesslogDownload.go  Bytes.go  (+9 more)
(+179 files in other folders)
